fix the fix for the layout bug

--- a/apparelrow/media/src/partials/_application.sass
+++ b/apparelrow/media/src/partials/_application.sass
@@ -79,6 +79,7 @@ button
 
 
 #login-pane
+  clear: left
   height: 28px
   line-height: 28px
   background: transparent image_url(unquote("profile-nav-bg.png")) scroll repeat-x left top
